syntax = "proto3";

package pb;

option go_package = "JollyRogerUserService/pb;pb";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  string id = 1;
  int64 chat_id = 2;
  string name = 3;
  uint32 age = 4;
  string country = 5;
  string city = 6;
  string language = 7;
  string about = 8;
  uint32 karma = 9;
}

// ==== Get ====

message GetUserRequest {
  int64 chat_id = 1;
}

message GetUserResponse {
  User user = 1;
}

// ==== Create ====

message CreateUserRequest {
  int64 chat_id = 1;
  string name = 2;
  uint32 age = 3;
  string country = 4;
  string city = 5;
  string language = 6;
  string about = 7;
}

message CreateUserResponse {
  User user = 1;
}

// ==== Update ====

message UpdateUserRequest {
  int64 chat_id = 1;
  string name = 2;
  uint32 age = 3;
  string country = 4;
  string city = 5;
  string language = 6;
  string about = 7;
  uint32 karma = 8;
}

message UpdateUserResponse {
  User user = 1;
}

// ==== Delete ====

message DeleteUserRequest {
  int64 chat_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}
